<resources>
    <string name="app_name">MoDeS3 Mobile Controller</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Light Sensor: %1$.2f"</string>
    <string name="segments">Segments</string>
    <string name="turnouts">Turnouts</string>
    <string name="trains"> Trains </string>
    <string name="filterButton_Done">asd</string>
    <string name="sensor">Sensor</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_light">Light Sensor: %1$.2f lux</string>
    <string name="mytext">mytext</string>

    <string name="offMessage">OFF sent to every Segments!</string>
    <string name="onMessage">ON sent to every Segments!</string>
    <string name="onLight">Light ON signal sent!</string>
    <string name="offLight">Light OFF signal sent!</string>
    <string name="missing">missing</string>
    <string name="emergencyStop">EMERGENCY STOP!</string>
    <string name="tryingToConnectTo">Trying to connect to</string>
    <string name="connectedTo">Connected to</string>
    <string name="failedToConnectTo">Failed to connect to</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="s01">S01</string>
    <string name="s02">S02</string>
    <string name="s05">S05</string>
    <string name="s06">S06</string>
    <string name="s07">S07</string>
    <string name="s04">S04</string>
    <string name="s10">S10</string>
    <string name="s11">S11</string>
    <string name="s12">S12</string>
    <string name="s13">S13</string>
    <string name="s15">S15</string>
    <string name="s17">S17</string>
    <string name="s18">S18</string>
    <string name="s19">S19</string>
    <string name="s20">S20</string>
    <string name="s22">S22</string>
    <string name="s23">S23</string>
    <string name="s24">S24</string>
    <string name="s26">S26</string>
    <string name="s27">S27</string>
    <string name="s29">S29</string>
    <string name="s30">S30</string>
    <string name="s31">S31</string>
    <string name="t01">T01</string>
    <string name="t02">T02</string>
    <string name="t03">T03</string>
    <string name="t04">T04</string>
    <string name="t05">T05</string>
    <string name="t06">T06</string>
    <string name="mqttServerURI">MQTT Server URI</string>
    <string name="MQTTserverURI">MQTTserverURI</string>
    <string name="ConnectionType">Connection type</string>
    <string name="connectionType">connectionType</string>
    <string name="s08">S08</string>
    <string name="piros">Piros</string>
    <string name="_25">25%</string>
    <string name="r">R</string>
    <string name="_50">50%</string>
    <string name="_75">75%</string>
    <string name="_100">100%</string>
    <string name="_0">0%</string>
    <string name="lightSensorInit">Light Sensor:</string>
</resources>
