<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/modes3white" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="335dp"
                android:layout_height="43dp"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/app_name">

            </android.support.v7.widget.Toolbar>

        </LinearLayout>



        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabTextAppearance="@style/MyCustomTabText">

            <android.support.design.widget.TabItem
                android:id="@+id/segments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/segments" />

            <android.support.design.widget.TabItem
                android:id="@+id/turnouts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/turnouts" />

            <android.support.design.widget.TabItem
                android:id="@+id/trains"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trains" />

            <android.support.design.widget.TabItem
                android:id="@+id/sensor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensor" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/stop"
        app:fabSize="normal" />

</android.support.design.widget.CoordinatorLayout>